--- a/Servidor/ux/html/PaginaWeb.html
+++ b/Servidor/ux/html/PaginaWeb.html
@@ -5,7 +5,7 @@
 <head>
 <title>Titulo de la web| Menos de 55 caracteres</title>
 <meta charset="utf-8" />
-<script type="text/javascript" src="../ux/proxy.js"></script>
+<script type="text/javascript" src="../ux/js/proxy.js"></script>
 <script>
 
 var proxy = new Proxy();
