cambios menores y Encriptar por email y contraseña
Cambios menores en /insertarUsuario ahora devuelve un Json con el status y el usuario

--- a/Servidor/ux/html/Login.html
+++ b/Servidor/ux/html/Login.html
@@ -19,7 +19,7 @@
       var tel = document.getElementById('telR').value;
 
       if (pass == pass2) {
-        proxy.insertarUsuarioP(email, pass, tel);
+        proxy.insertarUsuario(email, pass, tel);
       }else {
         console.log("error");
       }
