Prueba modal Login
Se ha añadido el diseño del formulario

--- a/Servidor/ux/html/Login.html
+++ b/Servidor/ux/html/Login.html
@@ -40,16 +40,36 @@
 
     }
   </script>
+  <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+  <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+  <!-- <script type="text/javascript" src=""></script> -->
+
 </head>
 
 <body>
 
-  <h1>Login</h1>
-  <div>
-    Email:<input type="text" id="Email"><br>
-    Contraseña:<input type="text" id="Pass"><br>
+ 
+  <div class="container">
+    <!--<section class="main row">
+      <article class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
+          <h1>Login</h1>
+        
+          <label>Email:</label><input type="text" id="Email"><br>
+          <label>Contraseña:</label><input type="text" id="Pass"><br>
+          
+          <button onclick="ComprobarUsuario()">Aceptar</button>
 
-    <button onclick="ComprobarUsuario()">Aceptar</button>
+      </article>
+    </section>-->
+    <section class="main">
+        <article class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
+           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam blanditiis ipsam modi placeat! Odit suscipit ab nobis labore officiis adipisci, doloribus quasi vero culpa ipsam! Dolore nihil labore voluptates numquam?</p>
+        </article>
+        <article class="col-xs-12 col-sm-4 col-md-8 col-lg-9">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam blanditiis ipsam modi placeat! Odit suscipit ab nobis labore officiis adipisci, doloribus quasi vero culpa ipsam! Dolore nihil labore voluptates numquam?</p>
+         </article>
+    </section>
+
   </div>
 
 
@@ -65,7 +85,7 @@
 
 
   <footer>
-    Creado por Josep ahora mismo
+    3º GTI Equipo-3
   </footer>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
