--- a/Servidor/ux/html/Login.html
+++ b/Servidor/ux/html/Login.html
@@ -50,7 +50,7 @@
 
  
   <div class="container">
-    <!--<section class="main row">
+    <section class="main row">
       <article class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
           <h1>Login</h1>
         
@@ -60,14 +60,6 @@
           <button onclick="ComprobarUsuario()">Aceptar</button>
 
       </article>
-    </section>-->
-    <section class="main">
-        <article class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
-           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam blanditiis ipsam modi placeat! Odit suscipit ab nobis labore officiis adipisci, doloribus quasi vero culpa ipsam! Dolore nihil labore voluptates numquam?</p>
-        </article>
-        <article class="col-xs-12 col-sm-4 col-md-8 col-lg-9">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam blanditiis ipsam modi placeat! Odit suscipit ab nobis labore officiis adipisci, doloribus quasi vero culpa ipsam! Dolore nihil labore voluptates numquam?</p>
-         </article>
     </section>
 
   </div>
