--- a/Servidor/ux/html/pruebaPop-upLogin.html
+++ b/Servidor/ux/html/pruebaPop-upLogin.html
@@ -51,32 +51,36 @@
 
 <div class="container">
   <h2 class="fuente">Poluzone</h2>
-  <!-- Trigger the modal with a button -->
+  <!-- Los botones para abrir los modales -->
   <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#login">Iniciar Sesión</button>
   <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#signIn">Registrarse</button>
   <!-- Modal para login -->
   <div class="modal fade" id="login" role="dialog">
-    <div class="modal-dialog modal-sm">
+    <div class="modal-dialog modal-sm ">
       <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Iniciar Sesión</h4>
+        <!-- Cabeza del modal, contiene el titulo del modal en este caso Iniciar Sesión -->
+        <div class="modal-header fondoOscuro">
+          <button type="button" class="close blanco" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title nunito blanco sizeM">Iniciar Sesión</h4>
         </div>
+        <!-- Cuerpo del modal, contiene el formulario del modal para Iniciar Sesión comprobando el usuario y su contraseña y el enlace para registrarse -->
         <div class="modal-body">
             <form class="form-horizontal">
                 <div class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                    <input id="email" type="text" class="form-control fuente" name="email" placeholder="Email">
+                    <input id="email" type="text" class="form-control nunito sizeS" name="email" placeholder="Email">
                 </div>
                 <div class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                    <input id="password" type="password" class="form-control fuente" name="password" placeholder="Password">
+                    <input id="password" type="password" class="form-control nunito sizeS" name="password" placeholder="Password">
                 </div>
-                <p>¿No tienes cuenta?</p><button type="button" class="btn btn-link fuente">Registrate</button>
-            </form>           
+            </form>   
+            <p class="nunito grisAzulado sizeS">¿No tienes cuenta?<a href="" type="button" data-toggle="modal" data-target="#signIn">Registrarse</a></p>
+            <!-- <button type="button" class="btn-link nunito sizeS">Registrate</button> -->        
         </div>
+        <!-- Cuerpo del modal, contiene las acciones para Iniciar Sesión -->
         <div class="modal-footer">
-            <button onclick="ComprobarUsuario()" class="btn">Entrar</button>  
+            <button onclick="ComprobarUsuario()" class="btn btn-sm active nunito fondoNaranja blanco centro">Entrar</button>  
           <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
         </div>
       </div>
