Diseño login terminado.
No hay un link en recuperar contraseña

--- a/Servidor/ux/html/pruebaPop-upLogin.html
+++ b/Servidor/ux/html/pruebaPop-upLogin.html
@@ -74,13 +74,14 @@
                     <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                     <input id="password" type="password" class="form-control nunito sizeS" name="password" placeholder="Password">
                 </div>
-            </form>   
-            <p class="nunito grisAzulado sizeS">¿No tienes cuenta?<a href="" type="button" data-toggle="modal" data-target="#signIn">Registrarse</a></p>
+            </form></br>
+            <p class="nunito grisAzulado sizeS">¿Has olvidado tu contraseña?<a href="" type="button" data-toggle="modal" data-target="#recoverPass"> Recuperar </a></p>   
+            <p class="nunito grisAzulado sizeS">¿No tienes cuenta?<a href="" type="button" data-toggle="modal" data-target="#signIn"> Registrarse </a></p>
             <!-- <button type="button" class="btn-link nunito sizeS">Registrate</button> -->        
         </div>
         <!-- Cuerpo del modal, contiene las acciones para Iniciar Sesión -->
-        <div class="modal-footer">
-            <button onclick="ComprobarUsuario()" class="btn btn-sm active nunito fondoNaranja blanco centro">Entrar</button>  
+        <div class="modal-footer centrado">
+            <button onclick="ComprobarUsuario()" class="btn btn-sm active nunito fondoNaranja blanco">Entrar</button>  
           <!--<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
         </div>
       </div>
