--- a/Servidor/ux/html/Login.html
+++ b/Servidor/ux/html/Login.html
@@ -8,41 +8,71 @@
   <script>
     var proxy = new Proxy();
 
+    function setCookie(cname, cvalue) {
+      //var d = new Date();
+    // d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
+      //var expires = "expires=" + d.toUTCString();
+      document.cookie = cname + "=" + cvalue + ";" + ";path=/";
+    }
 
-    function InsertarUsuario() {
+    function getCookie(cname) {
+      var name = cname + "=";
+      var ca = document.cookie.split(';');
+      for (var i = 0; i < ca.length; i++) {
+        var c = ca[i];
+        while (c.charAt(0) == ' ') {
+          c = c.substring(1);
+        }
+        if (c.indexOf(name) == 0) {
+          return c.substring(name.length, c.length);
+        }
+      }
+      return "";
+    }
 
-
-
-      var email = document.getElementById('emailR').value;
-      var pass = document.getElementById('passR').value;
-      var pass2 = document.getElementById('RpassR').value;
-      var tel = document.getElementById('telR').value;
-
-      if (pass == pass2) {
-        proxy.insertarUsuario(email, pass, tel);
-      }else {
-        console.log("error");
+    function checkCookie() {
+      var user = getCookie("username");
+      if (user != "") {
+        alert("Los cookies funcionan estimado: " + user);
+      }
       }
 
-    }
 
-    function ComprobarUsuario() {
 
-      var email = document.getElementById('Email').value;
-      var pass = document.getElementById('Pass').value;
+      function InsertarUsuario() {
 
-      var data = {
-        Email: email,
-        Password: pass
-      };
 
-      proxy.ComprobacionLogin(data);
 
-    }
+        var email = document.getElementById('emailR').value;
+        var pass = document.getElementById('passR').value;
+        var pass2 = document.getElementById('RpassR').value;
+        var tel = document.getElementById('telR').value;
+
+        if (pass == pass2) {
+          proxy.insertarUsuario(email, pass, tel);
+        } else {
+          console.log("error");
+        }
+
+      }
+
+      function ComprobarUsuario() {
+
+        var email = document.getElementById('Email').value;
+        var pass = document.getElementById('Pass').value;
+
+        var data = {
+          Email: email,
+          Password: pass
+        };
+
+        proxy.ComprobacionLogin(data);
+
+      }
   </script>
 </head>
 
-<body>
+<body onload="checkCookie()">
 
   <h1>Login</h1>
   <div>
