menú tamaño movil terminado

--- a/Servidor/ux/html/principal.html
+++ b/Servidor/ux/html/principal.html
@@ -24,10 +24,12 @@
                     menu
                     </i>
         </button>
-      
         <ul class="dropdown-menu fondoOscuro" role="menu" aria-labelledby="dropdownMenu1">
           <li role="presentation">
-            <a role="menuitem" tabindex="-1" href="#"><p class="blanco sizeS nunito">Perfil</p></a>
+            <a role="menuitem" tabindex="-1" href="#"><i class="material-icons blanco">
+                perm_identity
+                </i>
+                <p class="blanco sizeS nunito inlineBlock" style="vertical-align: super;">Perfil</p></a>
           </li>
           <li role="presentation">
             <a role="menuitem" class="sizeS" tabindex="-1" href="#">
@@ -39,7 +41,10 @@
             </a>
           </li>
           <li role="presentation">
-            <a role="menuitem" tabindex="-1" href="#"><p class="blanco sizeS nunito">Configuración</p></a>
+            <a role="menuitem" tabindex="-1" href="#"><i class="material-icons blanco">
+                settings_applications
+                </i>
+                <p class="blanco sizeS nunito inlineBlock" style="vertical-align: super;">Configuración</p></a>
           </li>
           <li role="presentation" class="divider"></li>
           <li role="presentation">
