Redirigido a el popup

--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -80,7 +80,7 @@
                                         <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
                                     </li>
                                     <li class="nav-item a_login d-sm-none">
-                                        <a class="nav-link" href="#" hi>Iniciar sesión</a>
+                                        <a class="nav-link" href="#login" hi>Iniciar sesión</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="#">Registrarse</a>
