Ultimos retoques en perfil
Falta recoger datos del usuario

--- a/Servidor/ux/html/principal.html
+++ b/Servidor/ux/html/principal.html
@@ -1,19 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <script type="text/javascript" src="../js/PROXY.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
-  <link rel="stylesheet" href="../css/estilos.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>-->
 <head>
     <!--  css de bootsrap  -->
     <!--<link rel="stylesheet" href="app/css/bootstrap.min.css">-->
@@ -22,7 +8,6 @@
     <!-- iconos Material Design -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
-
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -55,7 +40,7 @@
                               <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
                           </li>
                           <li class="nav-item a_login d-sm-none">
-                              <a class="nav-link" href="#perfil" hi><i class="material-icons">perm_identity</i><p class="nunito inlineBlock" style="vertical-align: super;">  Perfil</p></a>
+                              <a class="nav-link" href="http://localhost:8080/ux/html/perfil.html" hi><i class="material-icons">perm_identity</i><p class="nunito inlineBlock" style="vertical-align: super;">  Perfil</p></a>
                           </li>
                           <li class="nav-item">
                               <a class="nav-link" href="#mapa"><i class="material-icons">map</i><p class="nunito inlineBlock" style="vertical-align: super;">  Mapa</p></a>
@@ -69,10 +54,10 @@
                       </ul>
                       <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                           <li class="nav-item d-none d-xl-block">
-                              <button type="button" class="btn"><i class="material-icons naranja">perm_identity</i></button>
+                              <button type="button" class="btn" onclick="abrirPagina(url);"><i class="material-icons naranja">perm_identity</i></button>
                           </li>
                           <li class="nav-item d-none d-xl-block">
-                              <button type="button" class="btn"><i class="material-icons naranja">power_settings_new</i></button>
+                              <button type="button" class="btn bordeGris"><i class="material-icons naranja">power_settings_new</i></button>
                           </li>
                       </ul>
                   </div>
