base.html actualizado

--- a/Servidor/ux/html/principal.html
+++ b/Servidor/ux/html/principal.html
@@ -65,6 +65,11 @@
           </header>
     </div>
   </section>
+  <section>
+      <div class="d-flex-column">
+
+      </div>
+  </section>
        <!-- Todos los plugins JavaScript de Bootstrap (también puedes
         incluir archivos JavaScript individuales de los únicos
       plugins que utilices) -->
